--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.6",
     "@apollo/client": "^3.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngxs-labs/select-snapshot": "^3.0.0",
     "@ngxs/store": "^3.7.1",
     "graphql": "^15.0.0",
     "ngx-cookie-service": "^11.0.2",
