feat: read dcm file using wado-image-loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,11 @@
       "esnext.asynciterable"
     ],
     "allowSyntheticDefaultImports": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ]
+  },
+  "angularCompilerOptions": {
+    "types" : ["node"]
   }
 }
