--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@ngxs-labs/select-snapshot": "^3.0.0",
     "@ngxs/store": "^3.7.1",
+    "@types/node": "^15.6.0",
+    "cornerstone-core": "^2.3.0",
+    "cornerstone-wado-image-loader": "^3.3.1",
+    "dicom-parser": "^1.8.7",
     "graphql": "^15.0.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
@@ -36,7 +40,6 @@
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
