--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -92,6 +93,9 @@
           "configurations": {
             "production": {
               "browserTarget": "abus-prototype:build:production"
+            },
+            "development": {
+              "browserTarget": "abus-prototype:build:development"
             }
           }
         },
